--- a/index.html
+++ b/index.html
@@ -1,80 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300..800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div id="page">
-        <main>
-            <section class="primeira-secao">
-                <p>Sua próxima viagem:</p>
-                <h1>Conheça Busan</h1>
+      <main>
+        <section class="primeira-secao">
+          <p>Sua próxima viagem:</p>
+          <h1>Conheça Busan</h1>
 
-                <img src="assets/image1.png" alt="">
+          <img src="assets/image1.png" alt="" />
 
-                <span>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</span>
-            </section>
+          <span
+            >Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo,
+            desde churrascarias de primeira linha até tradicionais barracas de
+            comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e
+            descobrimos as suas ofertas culinárias.</span
+          >
+        </section>
 
-            <hr>
+        <hr />
 
-            <section class="segunda-secao">
-                <p>Para os amantes de história</p>
-                <h2>Descubra 3 destinos imperdíveis em Busan</h2>
+        <section class="segunda-secao">
+          <p>Para os amantes de história</p>
+          <h2>Descubra 3 destinos imperdíveis em Busan</h2>
 
-                <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.</p>
+          <p>
+            As atrações de Busan vão desde templos budistas centenários que
+            pontilham as montanhas e o litoral da cidade até praias imaculadas
+            com águas cristalinas. Esta cidade litorânea tem muitas coisas para
+            fazer o ano todo - as famílias podem passar o tempo em um aquário à
+            beira-mar, os compradores podem explorar bairros vibrantes e os
+            amantes da natureza podem desfrutar de longas caminhadas até
+            mirantes panorâmicos. <br />
+            Os santuários budistas que pontilham a costa e as montanhas de Busan
+            têm uma arquitetura impressionante que irá encantar os fotógrafos.
+          </p>
 
-                <p>Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
+          <div>
+              <img src="assets/image2.png" alt="" />
+              <h3>1. Templo Haedong Yonggungsa</h3>
+              <p>
+                O Templo Haedong Yonggungsa é um templo budista localizado no
+                extremo nordeste de Busan. Construído em 1376, é um dos poucos
+                templos na Coreia construídos à beira-mar – você pode desfrutar de
+                vistas do Mar do Leste de um lado e de belas montanhas do outro.
+              </p>
+              <p>Bom para:</p>
+              <ul>
+                <li>História</li>
+              </ul>
+          </div>
 
-                <ul>
-                    <li>
-                        <img src="assets/image2.png" alt="">
-                        <h3>1. Templo Haedong Yonggungsa </h3>
-                        <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. </p>
+          <div>
+              <img src="assets/image3.png" alt="" />
+              <h3>2. Templo Beomeo-sa</h3>
+              <p>
+                O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele
+                está localizado no alto da borda leste da montanha Geumjeongsa e
+                fica distante da agitação da cidade. O Daeungjeon Hall do templo é
+                um exemplo bem preservado da arquitetura da Dinastia Joseon.
+              </p>
+              <p>Bom para:</p>
+              <ul>
+                <li>História</li>
+              </ul>
+          </div>
 
-                        <p>Bom para:</p>
-                        <ul>
-                            <li>História</li>
-                        </ul>
-                    </li>
+          <div>
+              <img src="assets/image4.png" alt="" />
+              <h3>3. Parque Yongdusan</h3>
+              <p>
+                O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos
+                monumentos mais importantes da cidade. Você pode ver vistas
+                espetaculares do topo da Torre Busan, de 120 metros de altura. O
+                parque tem 2 museus – confira os instrumentos musicais tradicionais
+                no Museum of World Folk Instruments e mais de 80 veleiros coreanos
+                no Exhibition Hall of World Model Boats.
+              </p>
+              <p>Bom para:</p>
+              <ul>
+                <li>Casais</li>
+                <li>Famílias</li>
+                <li>Orçamento</li>
+              </ul>
+          </div>
+        </section>
 
-                    <li>
-                        <img src="assets/image3.png" alt="">
-                        <h3>2. Templo Beomeo-sa </h3>
-                        <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
+        <hr />
 
-                        <p>Bom para:</p>
-                        <ul>
-                            <li>História</li>
-                        </ul>
-                    </li>
+        <section class="secao-final">
+          <p>
+            As melhores coisas para fazer em Busan mostram a reputação da cidade
+            como um importante porto marítimo na Ásia. Frequentemente vista como
+            a essência da Coreia do Sul, você experimentará uma atmosfera única
+            em termos de diversidade étnica e cultural, já que a cidade recebe
+            um público cosmopolita o ano todo. 
+          </p>
+        </section>
+      </main>
 
-                    <li>
-                        <img src="assets/image4.png" alt="">
-                        <h3>3. Parque Yongdusan</h3>
-                        <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. </p>
-
-                        <p>Bom para:</p>
-                        <ul>
-                            <li>Casais</li>
-                            <li>Famílias</li>
-                            <li>Orçamento</li>
-                        </ul>
-                    </li>
-                </ul>
-            </section> 
-
-            <hr>
-
-            <section class="secao-final">
-                <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
-            </section>
-        </main>
-
-        <footer>Feito com <img src="assets/heart.svg" alt="">pela Rocketseat.</footer>
+      <footer>
+        Feito com <img src="assets/heart.svg" alt="" />pela Rocketseat.
+      </footer>
     </div>
-</body>
+  </body>
 </html>
